--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -792,6 +792,10 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-q") nil)
 
+;; Eanble transinet menus
+(use-package transient
+    :commands (transient-define-prefix))
+
 (defvar-keymap prefix-buffer-map-ctrl-l
   :doc "Prefix map for C-q for LSP"
   "j" #'consult-lsp-symbols
@@ -826,18 +830,19 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "y" #'consult-yasnippet
   "Y" #'yankpad-insert)
 
-;; (transient-define-prefix nc/goto-menu ()
-;;   "Go To: Quick Navigation"
-;;   [["Directories"
-;;     ("a" "Archives" nc/goto-archives-dir)
-;;     ("n" "Notes" nc/goto-notes-dir)
-;;     ("P" "Projects" nc/goto-projects-dir)
-;;     ("t" "Templates" nc/goto-templates-dir)
-;;     ]
-;;    ["Files"
-;;     (";" "Emacs Config" nc/goto-emacs-config)
-;;     ("p" "Credentials" nc/goto-my-credentials)
-;;     ]])
+(transient-define-prefix nc/goto-menu ()
+  "Go To: Quick Navigation"
+  [["Directories"
+    ("a" "Archives" nc/goto-archives-dir)
+    ("n" "Notes" nc/goto-notes-dir)
+    ("P" "Projects" nc/goto-projects-dir)
+    ("t" "Templates" nc/goto-templates-dir)
+    ]
+   ["Files"
+    (";" "Emacs Config" nc/goto-emacs-config)
+    ("p" "Credentials" nc/goto-my-credentials)
+    ]])
+
 
 (defvar-keymap prefix-buffer-map-ctrl-j
   :doc "Prefix map for C-q for jump"
@@ -1279,16 +1284,15 @@ Magit a git porcelain inside Emacs !
 #+END_QUOTE
 
 #+begin_src emacs-lisp
-  (use-package magit
+(use-package magit
 
-    :init
-    (when (getenv "GIT_EXECUTABLE")
-      (setq magit-git-executable (getenv "GIT_EXECUTABLE")))
-    :commands (magit-status magit-get-current-branch)
+  :init
+  (when (getenv "GIT_EXECUTABLE")
+    (setq magit-git-executable (getenv "GIT_EXECUTABLE")))
+  :commands (magit-status magit-get-current-branch)
 
-    :bind ("C-x g" . magit-status))
+  :bind ("C-x g" . magit-status))
 #+end_src
-
 
 ** Treemacs
 
