--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -790,175 +790,176 @@ your currently entered incomplete command (a prefix) in a popup.
 See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 #+begin_src emacs-lisp
-  (global-set-key (kbd "C-q") nil)
+(global-set-key (kbd "C-q") nil)
 
-  ;; Eanble transinet menus
-  (use-package transient
-      :commands (transient-define-prefix))
+;; Eanble transinet menus
+(use-package transient
+    :commands (transient-define-prefix))
 
-  (defvar-keymap prefix-buffer-map-ctrl-l
-    :doc "Prefix map for C-q for LSP"
-    "j" #'consult-lsp-symbols
-    "r" #'lsp-rename
-    "o" #'lsp-organize-imports
-    "X" #'lsp-treemacs-errors-list
-    "H" #'lsp-treemacs-call-hierarchy
-    "S" #'lsp-treemacs-symbols
-    "R" #'lsp-treemacs-references)
+(defvar-keymap prefix-buffer-map-ctrl-l
+  :doc "Prefix map for C-q for LSP"
+  "j" #'consult-lsp-symbols
+  "r" #'lsp-rename
+  "o" #'lsp-organize-imports
+  "X" #'lsp-treemacs-errors-list
+  "H" #'lsp-treemacs-call-hierarchy
+  "S" #'lsp-treemacs-symbols
+  "R" #'lsp-treemacs-references)
 
-  (defvar-keymap prefix-buffer-map-ctrl-d
-    :doc "Prefix map for C-q for dired / directories"
-    "j" #'dired
-    "s" #'denote-sort-dired
-    ;; "d" prefix-buffer-map-ctrl-denote
-    )
+(defvar-keymap prefix-buffer-map-ctrl-d
+  :doc "Prefix map for C-q for dired / directories"
+  "j" #'dired
+  "s" #'denote-sort-dired
+  ;; "d" prefix-buffer-map-ctrl-denote
+  )
 
-  (defvar-keymap prefix-buffer-map-ctrl-f
-    :doc "Prefix map for C-q for files"
-    "f" #'nc/consult-fd-my-projects
-    "r" #'rename-visited-file)
+(defvar-keymap prefix-buffer-map-ctrl-f
+  :doc "Prefix map for C-q for files"
+  "f" #'nc/consult-fd-my-projects
+  "r" #'rename-visited-file)
 
-  (defvar-keymap prefix-buffer-map-ctrl-i
-    :doc "Prefix map for C-q for Insert"
-    "d" #'nc/insert-datestamp-inactive
-    "D" #'nc/insert-datestamp
-    "e" #'emoji-search
-    "p" #'nc/generate-password
-    "q" #'quoted-insert
-    "t" #'tempel-insert
-    "u" #'nc/uuid
-    "y" #'consult-yasnippet
-    "Y" #'yankpad-insert)
+(defvar-keymap prefix-buffer-map-ctrl-i
+  :doc "Prefix map for C-q for Insert"
+  "d" #'nc/insert-datestamp-inactive
+  "D" #'nc/insert-datestamp
+  "e" #'emoji-search
+  "p" #'nc/generate-password
+  "q" #'quoted-insert
+  "t" #'tempel-insert
+  "u" #'nc/uuid
+  "y" #'consult-yasnippet
+  "Y" #'yankpad-insert)
 
-  (transient-define-prefix nc/goto-menu ()
-    "Go To: Quick Navigation"
-    [["Directories"
-      ("a" "Archives" nc/goto-archives-dir)
-      ("n" "Notes" nc/goto-notes-dir)
-      ("P" "Projects" nc/goto-projects-dir)
-      ("t" "Templates" nc/goto-templates-dir)
-      ]
-     ["Files"
-      (";" "Emacs Config" nc/goto-emacs-config)
-      ("p" "Credentials" nc/goto-my-credentials)
-      ]])
+(transient-define-prefix nc/goto-menu ()
+  "Go To: Quick Navigation"
+  [["Directories"
+    ("a" "Archives" nc/goto-archives-dir)
+    ("n" "Notes" nc/goto-notes-dir)
+    ("P" "Projects" nc/goto-projects-dir)
+    ("t" "Templates" nc/goto-templates-dir)
+    ]
+   ["Files"
+    (";" "Emacs Config" nc/goto-emacs-config)
+    ("p" "Credentials" nc/goto-my-credentials)
+    ]])
 
-  (transient-define-prefix nc/jump-menu ()
-    "Jump menu with avy and consult..."
-    ["Jump"
-     ["Avy"
-      (":" "Char" avy-goto-char-timer)
-      ("w" "Word" avy-goto-word-1)
-      ("l" "Line" avy-goto-line)
-      ]
-     ["Consult"
-      ("h" "Org Agenda Heading" consult-org-agenda)
-      ("i" "Outline/imenu" consult-imenu)
-      ("m" "Mark ring" consult-mark)
-      ("r" "Register" consult-register-load)
-      ]
-     ["Other"
-      ("." "Project dir-locals.el" projectile-edit-dir-locals)
-      ("g" "Goto line" goto-line)
-      ("f" "Find file at point" ffap)
-      ("F" "FFAP in buffer" ffap-menu)
-      ("v" "Browse VC Remote File" nc/vc-browse-remote)
-      ]])
+(transient-define-prefix nc/jump-menu ()
+  "Jump menu with avy and consult..."
+  ["Jump"
+   ["Avy"
+    (":" "Char" avy-goto-char-timer)
+    ("w" "Word" avy-goto-word-1)
+    ("l" "Line" avy-goto-line)
+    ]
+   ["Consult"
+    ("h" "Org Agenda Heading" consult-org-agenda)
+    ("i" "Outline/imenu" consult-imenu)
+    ("m" "Mark ring" consult-mark)
+    ("r" "Register" consult-register-load)
+    ]
+   ["Other"
+    ("." "Project dir-locals.el" projectile-edit-dir-locals)
+    ("g" "Goto line" goto-line)
+    ("f" "Find file at point" ffap)
+    ("F" "FFAP in buffer" ffap-menu)
+    ("G" "Browse VC Remote" nc/vc-browse-remote)
+    ("v" "Browse VC Remote File" nc/vc-browse-remote-current-line)
+    ]])
 
-  (defvar-keymap prefix-buffer-map-ctrl-k
-    :doc "Prefix map for C-q for killing"
-    "w" #'kill-buffer-and-window
-    "f" #'delete-frame
-    )
+(defvar-keymap prefix-buffer-map-ctrl-k
+  :doc "Prefix map for C-q for killing"
+  "w" #'kill-buffer-and-window
+  "f" #'delete-frame
+  )
 
-  (defvar-keymap prefix-buffer-map-ctrl-n
-    :doc "Prefix map for C-q for notes"
-    "s" #'org-search-view
-    "t" #'org-todo-list
-    "l" #'org-store-link
-    )
+(defvar-keymap prefix-buffer-map-ctrl-n
+  :doc "Prefix map for C-q for notes"
+  "s" #'org-search-view
+  "t" #'org-todo-list
+  "l" #'org-store-link
+  )
 
-  (defvar-keymap prefix-buffer-map-ctrl-o
-    :doc "Prefix map for C-q for open"
-    "c" #'calc
-    "e" #'crux-open-with
-    "f" #'make-frame
-    "g" #'nc/vc-browse-remote
-    "l" #'nc/open-bookmark
-    "t" #'nc/treemacs-toggle)
-
-
-  (defvar-keymap prefix-buffer-map-ctrl-s
-    :doc "Prefix map for C-q for Search"
-    "e" #'emoji-search
-    "n" #'nc/search-notes
-    "p" #'nc/consult-rg-my-projects
-    "s" #'nc/consult-line-symbol-at-point)
+(defvar-keymap prefix-buffer-map-ctrl-o
+  :doc "Prefix map for C-q for open"
+  "c" #'calc
+  "e" #'crux-open-with
+  "f" #'make-frame
+  "g" #'nc/vc-browse-remote
+  "l" #'nc/open-bookmark
+  "t" #'nc/treemacs-toggle)
 
 
-  (defvar-keymap prefix-buffer-map-ctrl-t
-    :doc "Prefix map for C-q for toggle features."
-    "D" #'toggle-debug-on-error
-    "P" #'smartparens-strict-mode
-    "S" #'show-smartparens-mode
-    "X" #'toggle-debug-on-quit
-    "e" #'eldoc-mode
-    "l" #'hl-line-mode
-    "n" #'linum-mode
-    "p" #'smartparens-mode
-    "r" #'rainbow-mode
-    "t" #'treemacs
-    "w" #'whitespace-mode)
-
-  (defvar-keymap prefix-buffer-map-ctrl-w
-    :doc "Prefix map for C-q for Windows."
-    "M-n" #'windmove-display-new-frame
-    "C-d" #'windmove-delete-down
-    "C-u" #'windmove-delete-up
-    "C-l" #'windmove-delete-left
-    "C-r" #'windmove-delete-right
-    "f" #'make-frame-command)
+(defvar-keymap prefix-buffer-map-ctrl-s
+  :doc "Prefix map for C-q for Search"
+  "e" #'emoji-search
+  "n" #'nc/search-notes
+  "p" #'nc/consult-rg-my-projects
+  "s" #'nc/consult-line-symbol-at-point)
 
 
-  (defvar-keymap prefix-command-q
-    :doc "Prefix Map for C-q:"
-    ";" #'nc/goto-emacs-config
-    ":" #'avy-goto-char-timer
-    "/" #'nc/consult-line-symbol-at-point
-    "a" #'embark-act
-    "f" #'nc/consult-fd-my-projects
-    "l" #'nc/open-bookmark
-    "g" #'nc/goto-menu
-    "j" #'nc/jump-menu
-    "C-d" prefix-buffer-map-ctrl-d
-    "C-f" prefix-buffer-map-ctrl-f
-    "C-q" #'major-mode-hydra
-    "C-i" prefix-buffer-map-ctrl-i
-    "C-k" prefix-buffer-map-ctrl-k
-    "C-n" prefix-buffer-map-ctrl-n
-    "C-o" prefix-buffer-map-ctrl-o
-    "C-p" #'projectile-command-map
-    "C-s" prefix-buffer-map-ctrl-s
-    "C-t" prefix-buffer-map-ctrl-t
-    "C-w" prefix-buffer-map-ctrl-w)
+(defvar-keymap prefix-buffer-map-ctrl-t
+  :doc "Prefix map for C-q for toggle features."
+  "D" #'toggle-debug-on-error
+  "P" #'smartparens-strict-mode
+  "S" #'show-smartparens-mode
+  "X" #'toggle-debug-on-quit
+  "e" #'eldoc-mode
+  "l" #'hl-line-mode
+  "n" #'linum-mode
+  "p" #'smartparens-mode
+  "r" #'rainbow-mode
+  "t" #'treemacs
+  "w" #'whitespace-mode)
+
+(defvar-keymap prefix-buffer-map-ctrl-w
+  :doc "Prefix map for C-q for Windows."
+  "M-n" #'windmove-display-new-frame
+  "C-d" #'windmove-delete-down
+  "C-u" #'windmove-delete-up
+  "C-l" #'windmove-delete-left
+  "C-r" #'windmove-delete-right
+  "f" #'make-frame-command)
 
 
-  (which-key-add-keymap-based-replacements prefix-command-q
-    "C-l" `("LSP" . ,prefix-buffer-map-ctrl-l)
-    "C-d" `("Dired/Denote"  . ,prefix-buffer-map-ctrl-d)
-    "C-f" `("File"  . ,prefix-buffer-map-ctrl-f)
-    ;;"C-g" `("Goto My Files" . ,prefix-buffer-map-ctrl-g)
-    "C-i" `("Insert" . ,prefix-buffer-map-ctrl-i)
-    ;; "C-j" `("Jump" . ,prefix-buffer-map-ctrl-j)
-    "C-k" `("Kill" . ,prefix-buffer-map-ctrl-k)
-    "C-n" `("Notes" . ,prefix-buffer-map-ctrl-n)
-    "C-o" `("Open" . ,prefix-buffer-map-ctrl-o)
-    "C-s" `("Search" . ,prefix-buffer-map-ctrl-s)
-    "C-t" `("Toggles" . ,prefix-buffer-map-ctrl-t)
-    "C-w" `("Window" . ,prefix-buffer-map-ctrl-w)
-    )
+(defvar-keymap prefix-command-q
+  :doc "Prefix Map for C-q:"
+  ";" #'nc/goto-emacs-config
+  ":" #'avy-goto-char-timer
+  "/" #'nc/consult-line-symbol-at-point
+  "a" #'embark-act
+  "f" #'nc/consult-fd-my-projects
+  "l" #'nc/open-bookmark
+  "g" #'nc/goto-menu
+  "j" #'nc/jump-menu
+  "C-d" prefix-buffer-map-ctrl-d
+  "C-f" prefix-buffer-map-ctrl-f
+  "C-q" #'major-mode-hydra
+  "C-i" prefix-buffer-map-ctrl-i
+  "C-k" prefix-buffer-map-ctrl-k
+  "C-n" prefix-buffer-map-ctrl-n
+  "C-o" prefix-buffer-map-ctrl-o
+  "C-p" #'projectile-command-map
+  "C-s" prefix-buffer-map-ctrl-s
+  "C-t" prefix-buffer-map-ctrl-t
+  "C-w" prefix-buffer-map-ctrl-w)
 
-  (keymap-set global-map "C-q" prefix-command-q)
+
+(which-key-add-keymap-based-replacements prefix-command-q
+  "C-l" `("LSP" . ,prefix-buffer-map-ctrl-l)
+  "C-d" `("Dired/Denote"  . ,prefix-buffer-map-ctrl-d)
+  "C-f" `("File"  . ,prefix-buffer-map-ctrl-f)
+  ;;"C-g" `("Goto My Files" . ,prefix-buffer-map-ctrl-g)
+  "C-i" `("Insert" . ,prefix-buffer-map-ctrl-i)
+  ;; "C-j" `("Jump" . ,prefix-buffer-map-ctrl-j)
+  "C-k" `("Kill" . ,prefix-buffer-map-ctrl-k)
+  "C-n" `("Notes" . ,prefix-buffer-map-ctrl-n)
+  "C-o" `("Open" . ,prefix-buffer-map-ctrl-o)
+  "C-s" `("Search" . ,prefix-buffer-map-ctrl-s)
+  "C-t" `("Toggles" . ,prefix-buffer-map-ctrl-t)
+  "C-w" `("Window" . ,prefix-buffer-map-ctrl-w)
+  )
+
+(keymap-set global-map "C-q" prefix-command-q)
 #+end_src
 
 
@@ -3423,21 +3424,46 @@ Hydra
 *** Dap
 
 #+begin_src emacs-lisp
-  (use-package dap-mode
-    ;; Uncomment the config below if you want all UI panes to be hidden by default!
-    ;; :custom
-    ;; (lsp-enable-dap-auto-configure nil)
-    ;; :config
-    ;; (dap-ui-mode 1)
-    :commands dap-debug
-    :config
-    (require 'dap-hydra)
+;; (use-package dap-mode
+;;   ;; Uncomment the config below if you want all UI panes to be hidden by default!
+;;   ;; :custom
+;;   ;; (lsp-enable-dap-auto-configure nil)
+;;   ;; :config
+;;   ;; (dap-ui-mode 1)
+;;   :commands dap-debug
 
-    ;; Bind `C-c l d` to `dap-hydra` for easy access
-     
+;;   :config
+;;   ;; Enable DAP UI automatically
+;;   (dap-ui-mode 1)
+;;   (dap-tooltip-mode 1)
+;;   (tooltip-mode 1)
 
+;;   ;; Enable DAP controls in the modeline
+;;   (dap-ui-controls-mode 1)
+  
+;;   (require 'dap-hydra)
 
-    )
+;;   ;; Bind `C-c l d` to `dap-hydra` for easy access
+
+;;   (dap-register-debug-template "Python :: Attach to running process"
+;;   (list :type "python"
+;;         :request "attach"
+;;         :processId "${command:pickProcess}"
+;;         :name "Python :: Attach to running process")))
+
+(use-package with-venv)
+
+(use-package dap-mode
+  :after lsp-mode
+  :commands dap-debug
+  :config
+  (require 'dap-python)
+  (setq dap-python-debugger 'debugpy)
+  (defun dap-python--pyenv-executable-find (command)
+    (with-venv (executable-find "python")))
+
+  (add-hook 'dap-stopped-hook
+            (lambda (arg) (call-interactively #'dap-hydra))))
 #+end_src
 ** Treesitter
 
@@ -3559,6 +3585,20 @@ Hydra
              (-mapcat (lambda (n) (treesit-node-text n t)))))))
 
 #+end_src
+*** Combobulate
+
+#+begin_src emacs-lisp
+(use-package combobulate
+    :custom
+    ;; You can customize Combobulate's key prefix here.
+    ;; Note that you may have to restart Emacs for this to take effect!
+    (combobulate-key-prefix "C-c o")
+    :hook ((python-ts-mode . combobulate-mode))
+    ;; Amend this to the directory where you keep Combobulate's source
+    ;; code.
+    :load-path ("~/Projects/_playground/combobulate"))
+#+end_src
+
 
 ** Parenthesis
 *** Smart Parens
@@ -3818,30 +3858,49 @@ Needs Java and plantuml.jar installed in =~/opt=
 :ID:       02349703-0f5e-4e81-a82f-08be2189690f
 :END:
 #+begin_src emacs-lisp
-  (use-package python-mode
-    :straight nil
-    :mode ("\\.py\\'")
-    :hook ((python-mode . dap-ui-mode)
-           (python-mode . dap-mode)
-           (python-mode . lsp-deferred))
-    :custom
-    (python-shell-interpreter "python")
+(use-package python
+  ;; python-ts-mode is part of Emacs itself, so we use :ensure nil
+  :ensure nil
+  :mode ("\\.py\\'" . python-ts-mode)
+  :init
+  ;; Prefer tree-sitter mode over classic python-mode
+  (add-to-list 'major-mode-remap-alist
+               '(python-mode . python-ts-mode)))
 
+(defun nc/setup-python-environment ()
+  "Setup a Python development environment in the current buffer."
 
-    :config
-    (require 'dap-python)
-    (setq dap-python-debugger 'debugpy))
+  ;; Enable YASnippet mode.
+  (yas-minor-mode 1)
 
+  ;; Setup active backends for `python-mode'.
+  ;; (company-backend-for-hook 'lsp-completion-mode-hook
+  ;;                           '((company-capf :with company-yasnippet)
+  ;;                             company-dabbrev-code))
+
+  ;; Enable LSP support in Python buffers.
+  (require 'lsp-pyright)
+  (lsp-deferred)
+
+  ;; Enable DAP support in Python buffers.
+  (require 'dap-python)
+  (setq-local dap-python-debugger 'debugpy)
+
+  (dap-mode 1))
+
+;; Configure hooks after `python-ts-mode' is loaded.
+(add-hook 'python-ts-mode-hook #'nc/setup-python-environment)
 #+end_src
 *** lsp-pyright
 :warning: LSP pyright needs NPM
 #+begin_src emacs-lisp
 (use-package lsp-pyright
   :init
+  ;; Prevent `lsp-pyright' start in multi-root mode.
+  ;; This must be set before the package is loaded.
+  (setq lsp-pyright-multi-root nil)
   (setq lsp-pyright-typechecking-mode "basic") ;; too much noise in "real" projects
-  :hook (python-mode . (lambda ()
-                         (require 'lsp-pyright)
-                         (lsp-deferred))))
+  )
 #+end_src
 *** Conda
 
@@ -3881,16 +3940,6 @@ Needs Java and plantuml.jar installed in =~/opt=
   (use-package pyvenv
     :config
     (pyvenv-mode))
-
-
-  (defun pyvenv-activate-poetry ()
-    "Activate the venv created by Poetry."
-    (interactive)
-    (let ((default-directory (project-root (project-current)))
-          (path (string-trim
-                 (shell-command-to-string "env -u VIRTUAL_ENV poetry env info --path"))))
-      (pyvenv-activate path)
-      (message "project: %s\nactivated: %s" default-directory path)))
 #+end_src
 
 *** Format buffer with Ruff
@@ -3914,7 +3963,7 @@ Formatting with ruff  : from https://github.com/DavidVujic/my-emacs-config/blob/
   :config
   (setq python-pytest-executable "python -m pytest")
   :bind
-  (:map python-mode-map
+  (:map python-ts-mode-map
           ("C-c C-t x" . python-pytest)
           ("C-c C-t t" . python-pytest-function-dwim)
           ("C-c C-t T" . python-pytest-function)
@@ -4458,7 +4507,6 @@ This function opens the repository's remote URL in the browser.
 If CURRENT-LINE is non-nil, it points to the current branch, file, and line. Otherwise, it opens the repository's main page.
 
 #+begin_src emacs-lisp
-
 (defun nc/vc-browse-remote (&optional current-line)
   "Open the repository's remote URL in the browser.
 If CURRENT-LINE is non-nil, point to the current branch, file, and line.
@@ -4481,6 +4529,12 @@ Otherwise, open the repository's main page."
 			   (format "https://%s/%s/blob/%s/%s#L%d" host path branch file line)
 			 (format "https://%s/%s" host path))))
 	  (message "Could not determine repository URL"))))
+
+
+(defun nc/vc-browse-remote-current-line ()
+  (interactive)
+  (let ((current-prefix-arg '(4))) ;; C-u
+    (call-interactively #'nc/vc-browse-remote)))
 #+end_src
 
 
