--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -815,7 +815,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 (transient-define-prefix nc/buffer-menu ()
   "Control buffer operations."
-  ["Buffer Navigation"
+  [["Buffer Navigation"
    ("n" "Next buffer" next-buffer :transient t)
    ("p" "Previous buffer" previous-buffer :transient t)
    ("b" "Switch buffer" switch-to-buffer)
@@ -844,7 +844,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
    ("A" "Toggle auto-fill" auto-fill-mode :transient t)
    ("f" "Set fill column" set-fill-column)
    ("F" "Show fill column" display-fill-column-indicator-mode :transient t)
-   ("e" "Set encoding" set-buffer-file-coding-system)]
+   ("e" "Set encoding" set-buffer-file-coding-system)]]
   ["Exit"
    ("q" "Quit" transient-quit-one)])
 
