--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -971,7 +971,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
    ["Frames"
     ("n" "New frame" make-frame-command)
     ("d" "Delete frame" delete-frame)
-    ("o" "Other frame" other-frame :transient t)
+    ("o" "Other frame" other-frame)
     ("O" "Only this frame" delete-other-frames)
     ("m" "Maximize" toggle-frame-maximized)
     ("f" "Fullscreen" toggle-frame-fullscreen)]
@@ -2010,46 +2010,46 @@ Template system perhaps should not be there...
 Cf https://github.com/minad/tempel
 #+begin_src emacs-lisp
 
-  ;; Configure Tempel
-  (use-package tempel
-    ;; Require trigger prefix before template name when completing.
-    :custom
-    (tempel-trigger-prefix "<")
+;; Configure Tempel
+(use-package tempel
+  ;; Require trigger prefix before template name when completing.
+  :custom
+  (tempel-trigger-prefix "<")
 
-    :bind (("M-+" . tempel-complete) ;; Alternative tempel-expand
-           ("M-*" . tempel-insert))
+  :bind (("M-+" . tempel-complete) ;; Alternative tempel-expand
+         ("M-*" . tempel-insert))
 
-    :config
-    (setq tempel-path (expand-file-name "templates" (concat (getenv "PIM_HOME") "/config/emacs")))
+  :config
+  (setq tempel-path (expand-file-name "tempel" nc/org-default-templates-dir))
 
-    :init
+  :init
 
-    ;; Setup completion at point
-    (defun tempel-setup-capf ()
-      ;; Add the Tempel Capf to `completion-at-point-functions'.
-      ;; `tempel-expand' only triggers on exact matches. Alternatively use
-      ;; `tempel-complete' if you want to see all matches, but then you
-      ;; should also configure `tempel-trigger-prefix', such that Tempel
-      ;; does not trigger too often when you don't expect it. NOTE: We add
-      ;; `tempel-expand' *before* the main programming mode Capf, such
-      ;; that it will be tried first.
-      (setq-local completion-at-point-functions
-                  (cons #'tempel-expand
-                        completion-at-point-functions)))
+  ;; Setup completion at point
+  (defun tempel-setup-capf ()
+    ;; Add the Tempel Capf to `completion-at-point-functions'.
+    ;; `tempel-expand' only triggers on exact matches. Alternatively use
+    ;; `tempel-complete' if you want to see all matches, but then you
+    ;; should also configure `tempel-trigger-prefix', such that Tempel
+    ;; does not trigger too often when you don't expect it. NOTE: We add
+    ;; `tempel-expand' *before* the main programming mode Capf, such
+    ;; that it will be tried first.
+    (setq-local completion-at-point-functions
+                (cons #'tempel-expand
+                      completion-at-point-functions)))
 
-    (add-hook 'conf-mode-hook 'tempel-setup-capf)
-    (add-hook 'prog-mode-hook 'tempel-setup-capf)
-    (add-hook 'text-mode-hook 'tempel-setup-capf)
+  (add-hook 'conf-mode-hook 'tempel-setup-capf)
+  (add-hook 'prog-mode-hook 'tempel-setup-capf)
+  (add-hook 'text-mode-hook 'tempel-setup-capf)
 
-    ;; Optionally make the Tempel templates available to Abbrev,
-    ;; either locally or globally. `expand-abbrev' is bound to C-x '.
-    (add-hook 'prog-mode-hook #'tempel-abbrev-mode)
-    (global-tempel-abbrev-mode)
-  )
+  ;; Optionally make the Tempel templates available to Abbrev,
+  ;; either locally or globally. `expand-abbrev' is bound to C-x '.
+  (add-hook 'prog-mode-hook #'tempel-abbrev-mode)
+  (global-tempel-abbrev-mode)
+)
 
-  ;; Optional: Add tempel-collection.
-  ;; The package is young and doesn't have comprehensive coverage.
-  ;;(use-package tempel-collection)
+;; Optional: Add tempel-collection.
+;; The package is young and doesn't have comprehensive coverage.
+;;(use-package tempel-collection)
 
 
 #+end_src
@@ -3318,7 +3318,7 @@ I try to do a lot of things with =org-roam= :
         ("C-c C-d C-R" . 'denote-dired-rename-marked-files-using-front-matter))
   
   :init
-  (setq denote-directory (expand-file-name "notes" (getenv "PIM_HOME")))
+  (setq denote-directory (expand-file-name "main" (getenv "PIM_HOME")))
   :config
   
   (setq denote-prompts '(subdirectory title keyword))
