Fix tempel templates (hardcoding)

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2020,7 +2020,7 @@ Cf https://github.com/minad/tempel
          ("M-*" . tempel-insert))
 
   :config
-  (setq tempel-path (expand-file-name "tempel" nc/org-default-templates-dir))
+  (setq tempel-path (expand-file-name "tempel" "~/notes/templates"))
 
   :init
 
