Rename buffer menu

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1034,6 +1034,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 
 (which-key-add-keymap-based-replacements prefix-command-q
+  "b" `("Buffer" . ,#'nc/buffer-menu)
   "C-l" `("LSP" . ,prefix-buffer-map-ctrl-l)
   "C-d" `("Dired/Denote"  . ,prefix-buffer-map-ctrl-d)
   "C-f" `("File"  . ,prefix-buffer-map-ctrl-f)
