Add key binding to nc/consult-rg-my-projects

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1017,6 +1017,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "a" #'embark-act
   "f" #'nc/consult-fd-my-projects
   "l" #'nc/open-bookmark
+  "s" #'nc/consult-rg-my-projects
   "t" #'nc/treemacs-toggle
   "v" #'nc/vc-browse-remote-current-line
   "C-b" #'nc/buffer-menu
